--- a/app/src/main/res/layout/topbar.xml
+++ b/app/src/main/res/layout/topbar.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/dashedBorderView"
-        android:text="Broker"
+        android:text="BrokerChain"
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold" />
