--- a/app/src/main/res/layout/activity_faucet.xml
+++ b/app/src/main/res/layout/activity_faucet.xml
@@ -80,7 +80,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
-                        android:text="Claim 1 BKC  for free every day"
+                        android:text="Claim some BKC  for free every day"
                         android:textColor="#000000"
                         android:textSize="14sp" />
 
