--- a/app/src/main/res/layout/activity_create_passw.xml
+++ b/app/src/main/res/layout/activity_create_passw.xml
@@ -35,11 +35,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Broker"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:layout_gravity="center_vertical"
+                android:text="BrokerChain"
                 android:textColor="#000000"
-                android:layout_gravity="center_vertical"/>
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -64,10 +64,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Explain why users need a password here"
             android:layout_marginTop="8dp"
-            android:textSize="16sp"
-            android:textColor="#000000"/>
+            android:text="This password is used to unlock this wallet."
+            android:textColor="#000000"
+            android:textSize="16sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="This password will only be saved locally."
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="wrap_content"
