--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,9 +32,9 @@
                 android:layout_centerInParent="true"
                 android:fontFamily="@font/work_sans_black"
                 android:maxLines="3"
-                android:text="Loading..."
+                android:text="Please add an account first."
                 android:textColor="#000000"
-                android:textSize="48sp"
+                android:textSize="24sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -44,9 +44,9 @@
                 android:layout_below="@+id/WTextview"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="8dp"
-                android:text="Please wait a moment"
-                android:textColor="#000000"
-                android:textSize="18sp" />
+                android:text="Click on the top right corner -> Settings -> Account -> Add account."
+                android:textColor="#FF0000"
+                android:textSize="13sp" />
 
 
 
