--- a/app/src/main/res/layout/topbar.xml
+++ b/app/src/main/res/layout/topbar.xml
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/brokerTextview1"
-        android:text=" (academic)"
+        android:text=""
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold" />
