--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -204,7 +204,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/setting_icon" />
+                    android:src="@drawable/user_icon" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -212,7 +212,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="16dp"
                     android:layout_toRightOf="@+id/seticon"
-                    android:text="Settings"
+                    android:text="Accounts"
                     android:textColor="#000000"
                     android:textSize="20sp" />
 
