--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,26 @@
 
         <!-- Logo and Text -->
         <include
-            layout="@layout/topbar"/>
 
+            layout="@layout/topbar"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_below="@id/action_bar"
+            >
+
+            <Spinner
+                android:id="@+id/accountSpinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+<!--            <TextView-->
+<!--                android:id="@+id/balanceTextView"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Account" />-->
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
