--- a/app/src/main/res/layout/activity_mint.xml
+++ b/app/src/main/res/layout/activity_mint.xml
@@ -173,6 +173,38 @@
                             android:textColor="#6B6B6B"
                             android:textSize="13sp" />
 
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
+                            android:text="Gas Limit"
+                            android:textColor="#000000"
+                            android:textSize="16sp" />
+
+                        <EditText
+                            android:id="@+id/edt_gas"
+                            android:layout_width="match_parent"
+                            android:layout_height="44dp"
+                            android:layout_marginTop="8dp"
+                            android:background="@drawable/custom_edittext_border"
+                            android:hint="1"
+                            android:paddingStart="16dp"
+                            android:paddingTop="8dp"
+                            android:paddingEnd="16dp"
+                            android:paddingBottom="8dp"
+                            android:inputType="number"
+                            android:digits="0123456789" />
+
+                        <TextView
+                            android:id="@+id/warning"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
+                            android:text=""
+                            android:textColor="#000000"
+                            android:textSize="16sp" />
+
+
                     </LinearLayout>
 
                 </androidx.core.widget.NestedScrollView>
