--- a/app/src/main/res/layout/activity_my_nfts.xml
+++ b/app/src/main/res/layout/activity_my_nfts.xml
@@ -182,7 +182,7 @@
                     android:layout_gravity="center_horizontal"
 
                     android:clickable="true"
-                    android:text="List"
+                    android:text="Sell"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
@@ -194,7 +194,7 @@
                     android:layout_columnWeight="1"
                     android:layout_gravity="center_horizontal"
                     android:clickable="true"
-                    android:text="Unlist"
+                    android:text="Take down"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
