--- a/app/src/main/res/layout/activity_select_account.xml
+++ b/app/src/main/res/layout/activity_select_account.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:paddingHorizontal="16dp"
-        android:text="Explain what is an account here"
+        android:text=""
         android:textSize="16sp"
         android:textColor="#000000"/>
 
