--- a/app/src/main/res/layout/activity_show_pr_kry.xml
+++ b/app/src/main/res/layout/activity_show_pr_kry.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Explain what is private key here"
+            android:text=""
             android:textSize="14sp"
             android:textColor="#000000"/>
 
