--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,9 +82,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
-                android:columnCount="5"
+                android:columnCount="6"
 
                 android:rowCount="2">
+
 
                 <!-- 第一行，放四张 SVG 图标 -->
                 <ImageView
@@ -139,6 +140,17 @@
                     android:layout_gravity="center"
 
                     android:src="@drawable/codepen_icon" />
+
+
+                <ImageView
+                    android:id="@+id/news"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_row="0"
+                    android:layout_column="5"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="center"
+                    android:src="@drawable/baseline_newspaper_black_48" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -198,6 +210,17 @@
                     android:layout_gravity="center_horizontal"
                     android:clickable="true"
                     android:text="NFT"
+                    android:textColor="#000000"
+                    android:textSize="16sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_row="1"
+                    android:layout_column="5"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="center_horizontal"
+                    android:clickable="true"
+                    android:text="News"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
