--- a/app/src/main/res/layout/activity_select_account.xml
+++ b/app/src/main/res/layout/activity_select_account.xml
@@ -22,19 +22,20 @@
         android:textSize="30sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:paddingHorizontal="16dp"
-        android:text=""
-        android:textSize="16sp"
-        android:textColor="#000000"/>
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:paddingHorizontal="16dp"-->
+<!--        android:text=""-->
+<!--        android:textSize="16sp"-->
+<!--        android:textColor="#000000"/>-->
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="304dp"
-        android:layout_marginTop="32dp">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="1dp">
 
         <LinearLayout
             android:id="@+id/acclinear"
@@ -249,37 +250,67 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <android.widget.Button
-        android:id="@+id/btn_add"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="Import account"
-        android:textAllCaps="false"
-        android:textSize="16sp"
-        android:textColor="#FFFFFF"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:layout_marginTop="31dp"
-        android:layout_marginHorizontal="16dp"
-        android:background="@drawable/custom_button_background" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp">
 
-    <android.widget.Button
-        android:id="@+id/btn_add2"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="Generate account"
-        android:textAllCaps="false"
-        android:textSize="16sp"
-        android:textColor="#FFFFFF"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:layout_marginTop="31dp"
-        android:layout_marginHorizontal="16dp"
-        android:background="@drawable/custom_button_background" />
+        <android.widget.Button
+            android:id="@+id/btn_add"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:text="Import account"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/custom_button_background"
+            android:layout_marginEnd="8dp" />
+
+        <android.widget.Button
+            android:id="@+id/btn_add2"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:text="Generate account"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/custom_button_background"
+            android:layout_marginStart="8dp" />
+    </LinearLayout>
+<!--    <android.widget.Button-->
+<!--        android:id="@+id/btn_add"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:text="Import account"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:textSize="16sp"-->
+<!--        android:textColor="#FFFFFF"-->
+<!--        android:paddingStart="16dp"-->
+<!--        android:paddingEnd="16dp"-->
+<!--        android:paddingTop="8dp"-->
+<!--        android:paddingBottom="8dp"-->
+<!--        android:layout_marginTop="31dp"-->
+<!--        android:layout_marginHorizontal="16dp"-->
+<!--        android:background="@drawable/custom_button_background" />-->
+
+<!--    <android.widget.Button-->
+<!--        android:id="@+id/btn_add2"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:text="Generate account"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:textSize="16sp"-->
+<!--        android:textColor="#FFFFFF"-->
+<!--        android:paddingStart="16dp"-->
+<!--        android:paddingEnd="16dp"-->
+<!--        android:paddingTop="8dp"-->
+<!--        android:paddingBottom="8dp"-->
+<!--        android:layout_marginTop="31dp"-->
+<!--        android:layout_marginHorizontal="16dp"-->
+<!--        android:background="@drawable/custom_button_background" />-->
 
 <!--    <LinearLayout-->
 <!--        android:layout_width="wrap_content"-->
