--- a/app/src/main/res/layout/activity_welcome_back.xml
+++ b/app/src/main/res/layout/activity_welcome_back.xml
@@ -28,7 +28,7 @@
             <ImageView
                 android:layout_width="96dp"
                 android:layout_height="96dp"
-                android:src="@drawable/logo"
+                android:src="@drawable/logo3"
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"/>
 
