--- a/app/src/main/res/layout/activity_swap.xml
+++ b/app/src/main/res/layout/activity_swap.xml
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/view"
                 android:layout_marginTop="32dp"
-                android:text="Allow BrokerFi to programmatically optimize your swaps to assist with:"
+                android:text="Allow BrokerChain Wallet to programmatically optimize your swaps to assist with:"
                 android:textSize="14sp"
                 android:textColor="#000000"/>
             <LinearLayout
@@ -159,7 +159,7 @@
                     android:id="@+id/button"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:text="Get started"
+                    android:text="Under development"
                     android:textAllCaps="false"
                     android:textSize="16sp"
                     android:textColor="#FFFFFF"
