--- a/app/src/main/res/layout/activity_welcome_back.xml
+++ b/app/src/main/res/layout/activity_welcome_back.xml
@@ -30,7 +30,7 @@
                 android:layout_height="96dp"
                 android:src="@drawable/logo4"
                 android:layout_gravity="center"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginTop="2dp"/>
 
 <!--            <View-->
 <!--                android:id="@+id/dashedBorderView"-->
@@ -57,7 +57,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Connecting you to the decentralized world"
+            android:text="Connecting to the decentralized world"
             android:layout_gravity="center"
             android:layout_marginTop="8dp"
             android:textSize="16sp"
