--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,10 +38,11 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_below="@+id/action_bar"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="120dp"
             android:layout_marginBottom="20dp"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/WTextview"
@@ -65,7 +66,6 @@
                 android:text="Click on the top right corner -> Settings -> Account -> Add account."
                 android:textColor="#FF0000"
                 android:textSize="13sp" />
-
 
 
         </RelativeLayout>
