--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -287,7 +287,7 @@
             android:layout_column="0"
             android:layout_columnWeight="1"
             android:layout_gravity="center"
-            android:text="DAO"
+            android:text="EmulatorDAO"
             android:textColor="#000000"
             android:textSize="14sp" />
 
